crates/kul-wasm/tests/snapshots/render_svg__example_03_three_generations.snap
---
source: crates/kul-wasm/tests/render_svg.rs
expression: json
---
{
  "ok": true,
  "svg": "<svg xmlns=\"http://www.w3.org/2000/svg\" viewBox=\"0 0 592 432\" width=\"592\" height=\"432\"><path class=\"kul-edge kul-edge--birth kul-edge--in-tree\" fill=\"none\" d=\"M 200 61 L 200 146 Q 200 156 190 156 L 115 156 Q 105 156 105 166 L 105 184\"/><path class=\"kul-edge kul-edge--birth kul-edge--in-tree\" fill=\"none\" d=\"M 200 221 L 200 306 Q 200 316 190 316 L 114 316 Q 104 316 104 326 L 104 344\"/><path class=\"kul-edge kul-edge--adoption kul-edge--in-tree\" fill=\"none\" d=\"M 200 221 L 200 306 Q 200 316 210 316 L 286 316 Q 296 316 296 326 L 296 344\" stroke-dasharray=\"6 4\"/><rect class=\"kul-bar\" x=\"191\" y=\"51\" width=\"18\" height=\"10\"/><rect class=\"kul-bar kul-bar--ended\" x=\"191\" y=\"211\" width=\"18\" height=\"10\"/><g class=\"kul-card kul-card--canonical\"><rect x=\"25\" y=\"24\" width=\"160\" height=\"64\" rx=\"8\" ry=\"8\"/><text class=\"kul-label-name\" x=\"105\" y=\"56\" text-anchor=\"middle\" dominant-baseline=\"central\">Ramesh Sharma</text></g><g class=\"kul-card kul-card--canonical\"><rect x=\"215\" y=\"24\" width=\"160\" height=\"64\" rx=\"8\" ry=\"8\"/><text class=\"kul-label-name\" x=\"295\" y=\"56\" text-anchor=\"middle\" dominant-baseline=\"central\">Sita Sharma</text></g><g class=\"kul-card kul-card--canonical\"><rect x=\"25\" y=\"184\" width=\"160\" height=\"64\" rx=\"8\" ry=\"8\"/><text class=\"kul-label-name\" x=\"105\" y=\"216\" text-anchor=\"middle\" dominant-baseline=\"central\">Alice Sharma</text></g><g class=\"kul-card kul-card--ghost\"><rect x=\"215\" y=\"184\" width=\"160\" height=\"64\" rx=\"8\" ry=\"8\" stroke-dasharray=\"3 2\"/><text class=\"kul-label-name\" x=\"295\" y=\"216\" text-anchor=\"middle\" dominant-baseline=\"central\">Bob Sharma</text><text class=\"kul-ghost-badge\" x=\"363\" y=\"198\" text-anchor=\"middle\">↺</text></g><g class=\"kul-card kul-card--canonical\"><rect x=\"24\" y=\"344\" width=\"160\" height=\"64\" rx=\"8\" ry=\"8\"/><text class=\"kul-label-name\" x=\"104\" y=\"376\" text-anchor=\"middle\" dominant-baseline=\"central\">Carol Sharma</text></g><g class=\"kul-card kul-card--canonical\"><rect x=\"216\" y=\"344\" width=\"160\" height=\"64\" rx=\"8\" ry=\"8\"/><text class=\"kul-label-name\" x=\"296\" y=\"376\" text-anchor=\"middle\" dominant-baseline=\"central\">Ravi Sharma</text></g><g class=\"kul-card kul-card--canonical\"><rect x=\"408\" y=\"24\" width=\"160\" height=\"64\" rx=\"8\" ry=\"8\"/><text class=\"kul-label-name\" x=\"488\" y=\"56\" text-anchor=\"middle\" dominant-baseline=\"central\">Bob Sharma</text></g></svg>"
}
